# TraderBot

./: .env.example  .gitignore  Quant BOT.py  README.md  pyproject.toml  requirements.txt
src/traderbot/: __init__.py  app.py  config.py  discord_client.py  exchange.py  executor.py  models.py  parser.py  risk.py
tests/: test_parser.py  test_risk.py
