[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traderbot"
version = "0.2.0"
description = "Discord signal parser and Bitget trade executor with dry-run safety defaults."
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.9,<4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
